# c_hidden_bugs

./: .gitignore  README.md
cpp_std_map/: CMakeLists.txt  stdmap.cpp
inline/exe/: CMakeLists.txt  main.cpp
inline/lib/: CMakeLists.exe.txt  CMakeLists.txt  header.h  implement.cpp  main.c
memory_cross_module/: CMakeLists.txt  Source.def  dll_main.c  exe_main.c  readme.md
mkdir_race_condition/: CMakeLists.txt  mymkdir.c  mymkdir.h  mymkdir_tests.c  rmdir.py
socket_send/: CMakeLists.txt  README.MD  udp_client.c  udp_client.py  udp_server.c  udp_server.py
struct-memset-zero/: CMakeLists.txt  struct-memset-zero.c
unsame_macro/: CMakeLists.txt  a.c  a.h  main.c
